Fix flickering on fast drag over of file [SCI-6966]

--- a/app/assets/stylesheets/shared/assets.scss
+++ b/app/assets/stylesheets/shared/assets.scss
@@ -447,4 +447,5 @@
   font-size: 12px;
   margin-right: 1em;
   padding: 4px 8px;
+  white-space: nowrap;
 }
